--- a/about.html
+++ b/about.html
@@ -7,28 +7,32 @@
   <link rel="stylesheet" href="../css/styless.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-        <a class="navbar-brand" href="index.html">
-            <img src="https://shorturl.asia/fv3zY" alt="Logo" class="rounded-circle" style="width: 50px; height: auto;">
-            Panmoodeng
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html">หน้าแรก</a></li>
-                <li class="nav-item"><a class="nav-link" href="#features">ผลิตภัณฑ์</a></li>
-                <li class="nav-item"><a class="nav-link" href="#social">ติดต่อเรา</a></li>
-                <li class="nav-item"><a class="nav-link" href="about.html">เกี่ยวกับเรา</a></li>
-            </ul>
-        </div>
-    </div>
-  </nav>
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+      <a class="navbar-brand" href="index.html">
+          <img src="https://shorturl.asia/fv3zY" alt="Logo" class="rounded-circle" style="width: 50px; height: auto;">
+          Panmoodeng
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+              <li class="nav-item"><a class="nav-link" href="#header">หน้าแรก</a></li>
+              <li class="nav-item"><a class="nav-link" href="shop.html">ผลิตภัณฑ์</a></li>
+              <li class="nav-item"><a class="nav-link" href="#social">ติดต่อเรา</a></li>
+              <li class="nav-item"><a class="nav-link" href="about.html">เกี่ยวกับเรา</a></li>
+              <li class="nav-item"><a class="nav-link" href="chart.html"><i class="bi bi-cart"></i> </a></li>
+          </ul>
+      </div>
+  </div>
+</nav>
 
   <!-- Content -->
   <div class="container">
