--- a/chart.html
+++ b/chart.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="th">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../css/shop.css">
-    <link rel="stylesheet" href="../css/style.css">
-
+    <title>ระบบรถเข็น</title>
+    <link rel="stylesheet" href="../css/chart.css">
 </head>
 
 <!-- Navbar -->
@@ -36,22 +34,17 @@
 </nav>
 
 <body>
-    
-    <div class="container">
-        <h2>Products</h2>
-        <div class="row" id="productList">
-            <!-- Product List will be dynamically generated here -->
+    <div class="cart-container">
+        <h1>รถเข็นของคุณ</h1>
+        <div id="cart-items">
+            <!-- สินค้าจะถูกแสดงที่นี่ -->
         </div>
-
-        <h3 class="mt-4">Cart</h3>
-        <ul id="cartList">
-            <!-- Cart items will be listed here -->
-        </ul>
-        <button id="checkoutBtn" class="btn btn-success">Checkout</button>
+        <div class="cart-total">
+            <p>ยอดรวม: <span id="total-price">0 บาท</span></p>
+        </div>
+        <button onclick="checkout()">ดำเนินการชำระเงิน</button>
     </div>
 
-    <script src="../js/shop.js"></script>
-
+    <script src="../js/chart.js"></script>
 </body>
-
 </html>
