--- a/index.html
+++ b/index.html
@@ -9,30 +9,32 @@
     <link rel="stylesheet" href="../css/style.css">
     <!-- Bootstrap Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 </head>
 <body>
     <script src="../js/scrip.js"></script>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <img src="https://shorturl.asia/fv3zY" alt="Logo" class="rounded-circle" style="width: 50px; height: auto;">
-                Panmoodeng
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#header">หน้าแรก</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#features">ผลิตภัณฑ์</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#social">ติดต่อเรา</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">เกี่ยวกับเรา</a></li>
-                </ul>
-            </div>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">
+            <img src="https://shorturl.asia/fv3zY" alt="Logo" class="rounded-circle" style="width: 50px; height: auto;">
+            Panmoodeng
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="#header">หน้าแรก</a></li>
+                <li class="nav-item"><a class="nav-link" href="shop.html">ผลิตภัณฑ์</a></li>
+                <li class="nav-item"><a class="nav-link" href="#social">ติดต่อเรา</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">เกี่ยวกับเรา</a></li>
+                <li class="nav-item"><a class="nav-link" href="chart.html"><i class="bi bi-cart"></i> </a></li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
    <!-- Header -->
 <header id="header" class="text-end py-5 text-white header">
@@ -206,7 +208,7 @@
         <div class="cta-box text-center bg-success text-white p-4">
             <h2 class="mb-3">พร้อมที่จะเริ่มต้นประสบการณ์ใหม่กับเรา?</h2>
             <p class="mb-3">สมัครสมาชิกหรือซื้อไอดีที่เหมาะกับคุณได้แล้ววันนี้!</p>
-            <a href="signup.html" class="btn btn-light btn-lg me-2">สมัครสมาชิก</a>
+            <a href="register.html" class="btn btn-light btn-lg me-2">สมัครสมาชิก</a>
             <a href="shop.html" class="btn btn-warning btn-lg">เลือกซื้อไอดี</a>
         </div>
 
