--- a/moodeng.html
+++ b/moodeng.html
@@ -5,31 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <title>Panmoodeng</title>
     <link rel="stylesheet" href="style.css">
     
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="https://github.com/ChanyapatZee/Project" alt="Logo" class="rounded-circle" style="width: 50px; height: auto;">
-                Panmoodeng
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">หน้าแรก</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#features">ผลิตภัณฑ์</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#social">ติดต่อเรา</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">เกี่ยวกับเรา</a></li>
-                </ul>
-            </div>
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">
+            <img src="https://shorturl.asia/fv3zY" alt="Logo" class="rounded-circle" style="width: 50px; height: auto;">
+            Panmoodeng
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="#header">หน้าแรก</a></li>
+                <li class="nav-item"><a class="nav-link" href="shop.html">ผลิตภัณฑ์</a></li>
+                <li class="nav-item"><a class="nav-link" href="#social">ติดต่อเรา</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">เกี่ยวกับเรา</a></li>
+                <li class="nav-item"><a class="nav-link" href="chart.html"><i class="bi bi-cart"></i> </a></li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <header class="bg-light text-center py-5">
         <h1 class="display-4 text-primary">Panmoodeng</h1>
